Attempted fix for footer overflow on small screens.

--- a/assets/styles/bootstrap-tweak.css
+++ b/assets/styles/bootstrap-tweak.css
@@ -4,6 +4,10 @@ body {
     color: #777777;
 }
 
+body {
+    padding-bottom: 65px;
+}
+
 section,
 aside {
     background: #ffffff;
